--- a/templates/default/default.conf.erb
+++ b/templates/default/default.conf.erb
@@ -7,7 +7,7 @@ server {
   error_log     <%= node['nginx']['log_dir'] %>/default.error.log;
 
   location / {
-    index   index.html index.htm;
+    index   index.php index.html index.htm;
   }
 
   location ~* \.php$ {
