--- a/test/fixtures/cookbooks/rackspace_nginx_php_test/templates/default/override.conf.erb
+++ b/test/fixtures/cookbooks/rackspace_nginx_php_test/templates/default/override.conf.erb
@@ -7,7 +7,7 @@ server {
   error_log     <%= node['nginx']['log_dir'] %>/override.error.log;
 
   location / {
-    index   index.html index.htm;
+    index   index.php index.html index.htm;
   }
 
   location ~* \.php$ {
